--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ npm-debug.log
 node_modules
 
 .DS_Store
+
+# Private data
+aws_config.json
+
+# Temporary files
+downloadedImages/
+resizedImages/
